[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/imgs/story_lv_1.png" type="Texture" id=1]
[ext_resource path="res://scenes/ui/Start.gd" type="Script" id=2]
[ext_resource path="res://assets/imgs/gods/ochosi.png" type="Texture" id=3]
[ext_resource path="res://assets/imgs/gods/templar.jpeg" type="Texture" id=4]
[ext_resource path="res://assets/imgs/gods/susanoo.png" type="Texture" id=5]
[ext_resource path="res://assets/imgs/gods/hercules.jpg" type="Texture" id=6]
[ext_resource path="res://assets/imgs/gods/veles.jpg" type="Texture" id=7]
[ext_resource path="res://assets/imgs/startAnim/start_anim_1.png" type="Texture" id=8]
[ext_resource path="res://assets/imgs/startAnim/start_anim_8.png" type="Texture" id=9]
[ext_resource path="res://assets/imgs/startAnim/start_anim_3.png" type="Texture" id=10]
[ext_resource path="res://assets/imgs/startAnim/start_anim_10.png" type="Texture" id=11]
[ext_resource path="res://assets/imgs/startAnim/start_anim_4.png" type="Texture" id=12]
[ext_resource path="res://assets/imgs/startAnim/start_anim_5.png" type="Texture" id=13]
[ext_resource path="res://assets/imgs/startAnim/start_anim_7.png" type="Texture" id=14]
[ext_resource path="res://assets/imgs/startAnim/start_anim_9.png" type="Texture" id=15]
[ext_resource path="res://assets/imgs/startAnim/start_anim_2.png" type="Texture" id=16]
[ext_resource path="res://assets/imgs/startAnim/start_anim_6.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 11 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[node name="Start" type="Node"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="StoryLv1" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 168, 216 )
texture = ExtResource( 1 )

[node name="StoryLv2" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="AnimatedSprite" parent="StoryLv2"]
position = Vector2( 102, 209 )
frames = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Hercules" type="Sprite" parent="."]
position = Vector2( -349, -167 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="Ochosi" type="Sprite" parent="."]
position = Vector2( -350, 75 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="Susanoo" type="Sprite" parent="."]
position = Vector2( -383, 853 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="Templar" type="Sprite" parent="."]
position = Vector2( -351, 316 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="Veles" type="Sprite" parent="."]
position = Vector2( -378, 602 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 454.0
margin_right = -10.0
margin_bottom = -39.0

[node name="MessageLabel" type="RichTextLabel" parent="ScrollContainer"]
margin_right = 280.0
margin_bottom = 130.0
rect_min_size = Vector2( 280, 130 )
custom_colors/default_color = Color( 0.956863, 0.956863, 0.956863, 1 )
bbcode_enabled = true

[node name="NextBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -22.0
margin_top = -32.0
margin_right = 22.0
margin_bottom = -12.0
text = "MÃ¡s"

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 640, 200 )

[connection signal="pressed" from="NextBtn" to="." method="_on_NextBtn_pressed"]
